--- a/src/subject3/subject3.html
+++ b/src/subject3/subject3.html
@@ -27,23 +27,23 @@
             <!-- 절대 1개 파일의 용량이 100MB를 넘지 않도록 하시오. 이를 어겨 발생하는 모든 문제는 학생이 알아서 해결하시오. -->
             <!-- 1개 파일의 용량을 1MB 이하로 하시오. -->
             <!-- 비메오 영상 포맷 가이드라인 링크: https://help.vimeo.com/hc/en-us/articles/12426043233169-Video-and-audio-compression-guidelines -->
-            <img src="./assets/패키지_01.jpg" alt="" />
-            <img src="./assets/패키지_02.jpg" alt="" />
-            <img src="./assets/패키지_03.jpg" alt="" />
-            <img src="./assets/패키지_04.jpg" alt="" />
-            <img src="./assets/패키지_05.jpg" alt="" />
-            <img src="./assets/패키지_06.jpg" alt="" />
-            <img src="./assets/패키지_07.jpg" alt="" />
-            <img src="./assets/패키지_08.jpg" alt="" />
-            <img src="./assets/패키지_09.jpg" alt="" />
-            <img src="./assets/패키지_10.jpg" alt="" />
-            <img src="./assets/패키지_11.jpg" alt="" />
-            <img src="./assets/패키지_12.jpg" alt="" />
-            <img src="./assets/패키지_13.jpg" alt="" />
-            <img src="./assets/패키지_14.jpg" alt="" />
-            <img src="./assets/패키지_15.jpg" alt="" />
-            <img src="./assets/패키지_16.jpg" alt="" />
-            <img src="./assets/패키지_17.jpg" alt="" />
+            <img src="./assets/pa_01.jpg" alt="" />
+            <img src="./assets/pa_02.jpg" alt="" />
+            <img src="./assets/pa_03.jpg" alt="" />
+            <img src="./assets/pa_04.jpg" alt="" />
+            <img src="./assets/pa_05.jpg" alt="" />
+            <img src="./assets/pa_06.jpg" alt="" />
+            <img src="./assets/pa_07.jpg" alt="" />
+            <img src="./assets/pa_08.jpg" alt="" />
+            <img src="./assets/pa_09.jpg" alt="" />
+            <img src="./assets/pa_10.jpg" alt="" />
+            <img src="./assets/pa_11.jpg" alt="" />
+            <img src="./assets/pa_12.jpg" alt="" />
+            <img src="./assets/pa_13.jpg" alt="" />
+            <img src="./assets/pa_14.jpg" alt="" />
+            <img src="./assets/pa_15.jpg" alt="" />
+            <img src="./assets/pa_16.jpg" alt="" />
+            <img src="./assets/pa_17.jpg" alt="" />
             <!-- 비메오 영상 포맷 가이드라인 링크: https://help.vimeo.com/hc/en-us/articles/12426043233169-Video-and-audio-compression-guidelines -->
             <!-- 1개 파일의 용량을 1MB 이하로 하시오. -->
             <!-- 절대 1개 파일의 용량이 100MB를 넘지 않도록 하시오. 이를 어겨 발생하는 모든 문제는 학생이 알아서 해결하시오. -->
